--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         window.WebChat.default(
           {
             customData: { language: "en" },
-            socketUrl: "https://rasa-sealedhermit.cloud.okteto.net/",
+            socketUrl: "https://rasa-relk-sealedhermit.cloud.okteto.net",
             title: "Rasa AI bot",
             subtitle: "Say hi to begin the chat..",
             welcomeMessage: "test",
